[gd_scene load_steps=17 format=2]

[ext_resource path="res://resources/Calendário/CALENDARIO_close_5.png" type="Texture" id=1]
[ext_resource path="res://resources/Calendário/CALENDARIO_close_4.png" type="Texture" id=2]
[ext_resource path="res://scr/Menus/Calendário_Menu.gd" type="Script" id=3]
[ext_resource path="res://resources/Calendário/CALENDARIO_close_3.png" type="Texture" id=4]
[ext_resource path="res://resources/Calendário/CALENDARIO_close_2.png" type="Texture" id=5]
[ext_resource path="res://resources/Calendário/CALENDARIO_close_1.png" type="Texture" id=6]
[ext_resource path="res://resources/MainMenu/hover-return.png" type="Texture" id=7]
[ext_resource path="res://resources/MainMenu/neutral-return.png" type="Texture" id=8]
[ext_resource path="res://resources/MainMenu/click-return.png" type="Texture" id=9]
[ext_resource path="res://resources/fontes/Courier Prime Bold.tres" type="DynamicFont" id=10]
[ext_resource path="res://scr/DataManagement/Mundo.tscn" type="PackedScene" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Dia 3",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Dia 5",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Dia 4",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Dia 1",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Dia 2",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "hover",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "click",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 34, 34 )

[sub_resource type="Animation" id=2]
resource_name = "Nova Animação"
tracks/0/type = "value"
tracks/0/path = NodePath("Fadein/Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Fadein/Fade:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fadein/Fade:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.188235, 0.0588235, 0.0588235, 0 ) ]
}

[node name="Calendário" type="Node"]
script = ExtResource( 3 )

[node name="Mundo" parent="." instance=ExtResource( 11 )]

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 960, 540 )
frames = SubResource( 1 )
animation = "Dia 3"

[node name="botao_voltar" type="Area2D" parent="."]
position = Vector2( 25, -9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="botao_voltar"]
position = Vector2( 96, 991 )
frames = SubResource( 4 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="botao_voltar"]
position = Vector2( 96, 991 )
shape = SubResource( 5 )

[node name="Fadein" type="AnimationPlayer" parent="."]
autoplay = "Nova Animação"
"anims/Nova Animação" = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Fade" type="ColorRect" parent="Fadein"]
margin_left = 7.0
margin_right = 1921.0
margin_bottom = 1103.0
color = Color( 0.188235, 0.0588235, 0.0588235, 0 )

[node name="texto" type="Label" parent="."]
margin_left = 229.0
margin_top = 873.0
margin_right = 1685.0
margin_bottom = 1003.0
custom_colors/font_color = Color( 0.941176, 0.729412, 0.0901961, 1 )
custom_fonts/font = ExtResource( 10 )
align = 1
autowrap = true

[connection signal="input_event" from="botao_voltar" to="." method="_on_botao_voltar_input_event"]
[connection signal="mouse_entered" from="botao_voltar" to="." method="_on_botao_voltar_mouse_entered"]
[connection signal="mouse_exited" from="botao_voltar" to="." method="_on_botao_voltar_mouse_exited"]
[connection signal="animation_finished" from="Fadein" to="." method="_on_Fadein_animation_finished"]
